--- a/styles.css
+++ b/styles.css
@@ -339,3 +339,69 @@ main section div h1
 {
     display:flex;
 }
+
+/* Main - Activity */
+
+.activity
+{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    margin:30px 0 50px 0;
+}
+.activity_bloc
+{
+    display:flex;
+    justify-content:space-between;
+    height:600px;
+}
+.activity_1card
+{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width:23%;
+    border-radius:15px;
+    box-shadow:5px 5px 5px 1px #F2F2F2;
+}
+.activity_2card
+{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width:23%;
+}
+.activity_2card2
+{
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    width:100%;
+    border-radius:15px;
+    box-shadow:5px 5px 5px 1px #F2F2F2;
+}
+.activity_img1
+{
+    height:530px;
+    width:100%;
+    border-radius:1.25rem 1.25rem 0 0;
+    object-fit:cover;
+}
+.activity_img2
+{
+    height:250px;
+    width:100%;
+    border-radius:1.25rem 1.25rem 0 0;
+    object-fit:cover;
+}
+.activity_img3
+{
+    height:150px;
+    width:100%;
+    border-radius:1.25rem 1.25rem 0 0;
+    object-fit:cover;
+}
+.activity_bloc h3
+{
+    margin:25px 0 25px 10px;
+}
