--- a/styles.css
+++ b/styles.css
@@ -428,3 +428,141 @@ footer div ul
 {
     padding-left:0;
 }
+
+/* Responsive design for smartphone */
+
+@media only screen  and (min-width: 300px) and (max-width:600px)
+{
+   /* Header */
+   header
+   {
+       display:grid;
+       grid-template-columns:50% 50%;
+       grid-template-rows:50% 50%;
+       height:100px;
+   }
+   header span
+   {
+       flex-direction:row-reverse;
+       width:100%;
+   }
+   header ul
+   {
+       grid-column: 1 / 3;
+       grid-row: 2 / 3;
+       width:100%;
+       padding-left:0;
+   }
+   header li
+   {
+       width:50%;
+       text-align:center;
+   }
+   .lien1
+   {
+       border-top:none;
+       border-bottom:solid 2px #0065FC;
+   }
+
+   /* Main */
+
+   main
+   {
+       padding:0 2rem;
+   }
+
+   /* Main - Search */
+
+   .search div p
+   {
+       display:none;
+   }
+   .search div i
+   {
+       display:flex;
+       font-size:14px;
+   }
+   .filter_title
+   {
+       width:100%;
+       margin-bottom:0;
+   }
+   .filter_texticon
+   {
+       margin-top:20px;
+   }
+
+   /* Main - Hosting */
+
+   .hosting
+   {
+       display:grid;
+       grid-template-columns:1fr;
+       row-gap:2rem;
+   }
+   .hosting1
+   {
+       display:grid;
+       grid-template-columns:1fr;
+       row-gap:2rem;
+       height:auto;
+       margin-right:0;
+       background-color:white;
+   }
+   .hosting2
+   {
+       grid-row-start:1;
+   }
+
+   /* Main - Activity */
+
+   .activity
+   {
+       margin:0 0 20px 0;
+       padding:20px;
+   }
+   .activity_bloc
+   {
+       height:auto;
+       flex-direction:column;
+       row-gap:20px;
+   }
+   .activity_bloc h3
+   {
+       padding-left:10px;
+       margin:15px 0;
+   }
+   .activity_1card
+   {
+       width:100%;
+   }
+   .activity_img1
+   {
+       height:150px;
+   }
+   .activity_2card
+   {
+       width:100%;
+       row-gap:20px;
+   }
+   .activity_img2
+   {
+       height:150px;
+   }
+   .activity_img3
+   {
+       height:150px;
+   }
+
+   /* Footer */
+
+   footer 
+   {
+       flex-direction:column;
+       padding:20px 0 20px 50px;
+   }
+   footer div
+   {
+       width:100%;
+   }
+}
