--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 body
 {
     font-family:"Raleway";
-    color:black;
     margin:0;
 }
 h1 h2
@@ -25,14 +24,13 @@ p
 a
 {
     text-decoration:none;
-    color:black;
 }
-.colorgrey_star
+.starcolor_grey
 {
     color:#0000002e;
     font-size:13px;
 }
-.colorblue_star
+.starcolor_blue
 {
     color:#0065FC;
     font-size:13px;
@@ -48,69 +46,150 @@ header
 {
     display:flex;
     height:50px;
-    margin:0 0.5rem 0 0.5rem;
+    margin:0 25px 0 25px;
     padding-top:1rem;
+}
+@media screen and (max-width:600px)
+{
+    header
+    {
+        display:grid;
+        grid-template-columns:50% 50%;
+        grid-template-rows:50% 50%;
+        height:100px;
+        margin:0;
+    }
 }
 header img
 {
     height:50px;
     width:120px;
-    margin-right:60%;
+    margin-right:auto;
+}
+@media screen and (max-width:600px)
+{
+    header img
+    {
+        margin-right:0;
+        padding-left:20px;
+    }
 }
 header ul
 {
-    width:25%;
     display:flex;
-    justify-content:space-between;    
+}
+@media screen and (max-width:600px)
+{
+    header ul
+    {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        padding-left:0;
+        width:100%;
+    }
 }
 header li
 {
     height:100%;
     list-style:none;
-    padding:0 15px 0 15px;
+}
+header li a
+{
+    padding:0 25px;
+}
+@media screen and (max-width:600px)
+{
+    header li
+    {
+        text-align:center;
+        width:50%;
+    }
 }
 .lien1
 {
     border-top:solid 2px #0065FC;
+    margin-top:-2px;
 }
-.lien11
+@media screen and (max-width:600px)
+{
+    .lien1
+    {
+        border-top:none;
+        border-bottom:solid 2px #0065FC;
+        padding-top:2px;
+    }
+    .lien2
+    {
+        border-bottom:solid 2px #0000002e;
+    }
+}
+.lien1 a
 {
     color:#0065FC;
 }
 header span
 {
-    height:50px;
-    width:15%;
     display:flex;
+    height:50px;
     align-items:center;
+}
+@media screen and (max-width:600px)
+{
+    header span
+    {
+        flex-direction:row-reverse;
+        width:100%;
+    }
 }
 .lien3
 {
     color:#0065FC;
     font-weight:bold;
-    padding:0 25px 0 25px;
+    padding:0 25px;
 }
+
 /* Main */
 
 main
 {
-    padding:0 0.5rem;
+    padding:0 25px;
+}
+@media screen and (max-width:600px)
+{
+    main
+    {
+        padding:0;
+    }
 }
 
 /* Main - Search */
 
-main section div h1
+@media screen and (max-width:600px)
 {
-    margin-bottom:0.5rem;
+    .search
+    {
+        padding:0 10px;
+    }
 }
-.search
+.search h1
+{
+    margin-bottom:8px;
+}
+.searchbar
 {
     display:flex;
     align-items:center;
     height:50px;
-    margin:1.5rem 0 2rem 0;
+    margin:20px 0 30px 0;
 }
-.search span
+@media screen and (max-width:600px)
+{
+    .searchbar
+    {
+        margin:20px 0;
+    }
+}
+.searchbar span
 {
     display:flex;
     justify-content:center;
@@ -120,7 +199,14 @@ main section div h1
     background-color:#F2F2F2;
     border-radius:10px 0 0 10px;
 }
-.search input
+@media screen and (max-width:600px)
+{
+    .searchbar span
+    {
+        border-radius:15px 0 0 15px;
+    }
+}
+.searchbar input
 {
     height:50px;
     width:220px;
@@ -130,65 +216,81 @@ main section div h1
     border-bottom:#F2F2F2 2px solid;
     border-top:#F2F2F2 2px solid;
 }
-.search input::placeholder
+@media screen and (max-width:600px)
+{
+    .searchbar input
+    {
+        width:250px;
+    }
+}
+.searchbar input::placeholder
 {
     color:black;
     font-weight:bold;
 }
-.search div
+.searchbar div
 {
     display:flex;
     align-items:center;
     height:50px;
-    padding:0 1.5rem;
+    padding:0 20px;
     background-color:#0065FC;
     border:none;
     border-radius:0 10px 10px 0;
 }
-.search div:hover
+.searchbar div:hover
 {
     background-color:#DEEBFF;
     cursor:pointer;
     color:black;
 }
-.search div p
+@media screen and (max-width:600px)
+{
+    .searchbar div
+    {
+        border-radius:15px;
+        margin-left:-10px;
+    }
+}
+.searchbar div p
 {
     font-size:20px;
     margin:0;
     font-weight:bold;
     color:white;
 }
-.search div p:hover
+.searchbar div p:hover
 {
     color:black;
 }
-.search div i
+@media screen and (max-width:600px)
 {
-    color:white;
+    .searchbar div p
+    {
+        display:none;
+    }
+}
+.searchbar div i
+{
     display:none;
+    color:white;
 }
-.search div i:hover
+.searchbar div i:hover
 {
     color:black;
 }
-.info
+@media screen and (max-width:600px)
 {
-    display:flex;
-    align-items:center;
-    margin:2rem 0 2rem 0;
-    font-size:14px;
-}
-.info i
-{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:30px;
-    width:30px;
-    margin-right:10px;
-    color:#0065FC;
-    border:2px solid #F2F2F2;
-    border-radius:25px;  
+    .searchbar div i
+    {
+        display:flex;
+        font-size:14px;
+    }
+    .searchbar div i:hover
+    {
+        background-color:#DEEBFF;
+        color:black;
+    }
 }
 .filter
 {
@@ -199,6 +301,13 @@ main section div h1
 {
     margin-right:30px;
 }
+@media screen and (max-width:600px)
+{
+    .filter_title
+    {
+        width:100%;
+    }
+}
 .filter_texticon
 {
     display:flex;
@@ -208,6 +317,13 @@ main section div h1
     border:2px solid #F2F2F2;
     border-radius:25px;
     cursor:pointer;
+}
+@media screen and (max-width:600px)
+{
+    .filter_texticon
+    {
+        margin:0 10px 15px 0;
+    }
 }
 .filter_texticon i
 {
@@ -223,12 +339,46 @@ main section div h1
 }
 .filter_texticon h3
 {
-    padding:0 10px 0 10px;
+    padding:0 10px;
+    font-size:17px;
+}
+@media screen and (max-width:600px)
+{
+    .filter_texticon h3
+    {
+        margin-right:0;
+    }
 }
 .filter_texticon i:hover
 {
     background-color:#0065FC;
     color:white;
+}
+.info
+{
+    display:flex;
+    align-items:center;
+    margin:30px 0;
+    font-size:14px;
+}
+@media screen and (max-width:600px)
+{
+    .info
+    {
+        margin:15px 0;
+    }
+}
+.info i
+{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:30px;
+    width:30px;
+    margin-right:10px;
+    color:#0065FC;
+    border:2px solid #F2F2F2;
+    border-radius:25px;  
 }
 
 /* Main - Hosting */
@@ -239,35 +389,63 @@ main section div h1
     justify-content:space-around;
     align-items:center;
 }
+@media screen and (max-width:600px)
+{
+    .hosting
+    {
+        display:grid;
+        row-gap:20px;
+    }
+}
 .hosting1
 {
     flex:2;
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
-    grid-gap:20px;
-    height:670px;
-    margin-right:40px;
-    padding:20px;
+    grid-gap:25px;
+    height:660px;
+    margin-right:25px;
+    padding:25px;
     border-radius:10px;
     background-color:#F2F2F2;
+}
+@media screen and (max-width:600px)
+{
+    .hosting1
+    {
+        display:flex;
+        flex-direction:column;
+        height:auto;
+        margin:0;
+        padding:30px 15px;
+        background-color:white;
+    }
 }
 .hosting1 h2
 {
     grid-column: 1/-1;
+    margin:0;
 }
 .hosting1_card
 {
     height:auto;
     padding:3px;
-    border-radius:1.25rem;
-    box-shadow:0 0 16px #0000002e;
+    border-radius:18px;
+    box-shadow:0 0 15px #0000002e;
     background-color:white;
+}
+@media screen and (max-width:600px)
+{
+    .hosting1_card
+    {
+        box-shadow:0 3px 20px #0000002e;
+    }
 }
 .hosting1_img
 {
     height:120px;
     width:100%;
-    border-radius:1.25rem 1.25rem 0 0;
+    border-radius:18px 18px 0 0;
     object-fit:cover;
 }
 .hosting1_detailarticle
@@ -275,47 +453,103 @@ main section div h1
     margin-left:5px;
     text-decoration:none;
 }
+@media screen and (max-width:600px)
+{
+    .hosting1_detailarticle
+    {
+        margin-left:20px;
+    }
+}
 .hosting1_detailarticle h3
 {
-    margin:1rem 0 1rem 0;
+    margin:15px 0;
+}
+@media screen and (max-width:600px)
+{
+    .hosting1_detailarticle h3
+    {
+        margin:5px 0 10px 0;
+    }
 }
 .hosting1_detailarticle p
 {
-    margin:0 0 1rem 0;
+    margin-bottom:15px;
+}
+@media screen and (max-width:600px)
+{
+    .hosting1_detailarticle p
+    {
+        margin:10px 0;
+    }
 }
 .hosting1_star
 {
     display:flex;
-    margin:8px 0 8px 0;
+    margin:8px 0;
 }
 .hosting2
 {
     flex:1;
-    height:670px;
-    padding:20px;
+    height:660px;
+    padding:25px;
     border-radius:10px;
     background-color:#F2F2F2;
+}
+@media screen and (max-width:600px)
+{
+    .hosting2
+    {
+        grid-row-start:1;
+        height:auto;
+        padding:30px 15px;
+        border-radius:0;
+    }
 }
 .hosting2_head
 {
     display:flex;
     justify-content:space-between;
     align-items:center;
-    margin:0 0 24px 0;
+    margin-bottom:42px;
+}
+@media screen and (max-width:600px)
+{
+    .hosting2_head
+    {
+        margin-bottom:20px;
+    }
+}
+.hosting2 h2
+{
+    margin:0;
 }
 .hosting2_bloc
 {
     display:flex;
     flex-direction:column;
-    row-gap:30px;
+    row-gap:35px;
+}
+@media screen and (max-width:600px)
+{
+    .hosting2_bloc
+    {
+        row-gap:15px;
+    }
 }
 .hosting2_card
 {
     display:flex;
-    background-color:white;
     height:170px;
-    border-radius:1.25rem;
-    box-shadow:0 0 16px #0000002e;
+    border-radius:18px;
+    background-color:white;
+    box-shadow:0 0 15px #0000002e;
+}
+@media screen and (max-width:600px)
+{
+    .hosting2_card
+    {
+        box-shadow:0 0 10px #0000002e;
+    }
 }
 .hosting2_img
 {
@@ -324,7 +558,7 @@ main section div h1
     width:35%;
     margin-right:15px;
     padding:3px;
-    border-radius:1.25rem 0 0 1.25rem;
+    border-radius:18px 0 0 18px;
     object-fit:cover;
 }
 .hosting2_detailarticle
@@ -339,6 +573,12 @@ main section div h1
 {
     display:flex;
 }
+.hosting1 h4
+{
+    font-size:18px;
+    color:black;
+    margin:0;
+}
 
 /* Main - Activity */
 
@@ -349,11 +589,29 @@ main section div h1
     justify-content:space-between;
     margin:30px 0 50px 0;
 }
+@media screen and (max-width:600px)
+{
+    .activity
+    {
+        height:auto;
+        margin:0;
+        padding:0 15px 20px 15px;
+    }
+}
 .activity_bloc
 {
     display:flex;
     justify-content:space-between;
     height:600px;
+}
+@media screen and (max-width:600px)
+{
+    .activity_bloc
+    {
+        flex-direction:column;
+        height:auto;
+        row-gap:20px;
+    }
 }
 .activity_1card
 {
@@ -364,12 +622,27 @@ main section div h1
     border-radius:15px;
     box-shadow:5px 5px 5px 1px #F2F2F2;
 }
+@media screen and (max-width:600px)
+{
+    .activity_1card
+    {
+        width:100%;
+    }
+}
 .activity_2card
 {
     display:flex;
     flex-direction:column;
     justify-content:space-between;
     width:23%;
+}
+@media screen and (max-width:600px)
+{
+    .activity_2card
+    {
+        width:100%;
+        row-gap:20px;
+    }
 }
 .activity_2card2
 {
@@ -384,26 +657,51 @@ main section div h1
 {
     height:530px;
     width:100%;
-    border-radius:1.25rem 1.25rem 0 0;
+    border-radius:18px 18px 0 0;
     object-fit:cover;
 }
 .activity_img2
 {
     height:250px;
     width:100%;
-    border-radius:1.25rem 1.25rem 0 0;
+    border-radius:18px 18px 0 0;
     object-fit:cover;
 }
 .activity_img3
 {
     height:150px;
     width:100%;
-    border-radius:1.25rem 1.25rem 0 0;
+    border-radius:18px 18px 0 0;
     object-fit:cover;
+}
+@media screen and (max-width:600px)
+{
+    .activity_img1
+    {
+        height:120px;
+        width:100%;
+    }
+    .activity_img2
+    {
+        height:120px;
+        width:100%;
+    }
+    .activity_img3
+    {
+        height:120px;
+        width:100%;
+    }
 }
 .activity_bloc h3
 {
     margin:25px 0 25px 10px;
+}
+@media screen and (max-width:600px)
+{
+    .activity_bloc h3
+    {
+        margin: 25px 0 25px 20px;
+    }
 }
 
 /* Footer */
@@ -415,9 +713,25 @@ footer
     padding:20px 70px 20px 20px;
     background-color:#F2F2F2;
 }
+@media screen and (max-width:600px)
+{
+    footer
+    {
+        height:auto;
+        flex-direction:column;
+        padding:15px 70px 20px 20px;
+    }
+}
 footer div
 {
     width:30%;
+}
+@media screen and (max-width:600px)
+{
+    footer div
+    {
+        width:100%;
+    }
 }
 footer li
 {
@@ -428,141 +742,7 @@ footer div ul
 {
     padding-left:0;
 }
-
-/* Responsive design for smartphone */
-
-@media only screen  and (min-width: 300px) and (max-width:600px)
+footer div ul a
 {
-   /* Header */
-   header
-   {
-       display:grid;
-       grid-template-columns:50% 50%;
-       grid-template-rows:50% 50%;
-       height:100px;
-   }
-   header span
-   {
-       flex-direction:row-reverse;
-       width:100%;
-   }
-   header ul
-   {
-       grid-column: 1 / 3;
-       grid-row: 2 / 3;
-       width:100%;
-       padding-left:0;
-   }
-   header li
-   {
-       width:50%;
-       text-align:center;
-   }
-   .lien1
-   {
-       border-top:none;
-       border-bottom:solid 2px #0065FC;
-   }
-
-   /* Main */
-
-   main
-   {
-       padding:0 2rem;
-   }
-
-   /* Main - Search */
-
-   .search div p
-   {
-       display:none;
-   }
-   .search div i
-   {
-       display:flex;
-       font-size:14px;
-   }
-   .filter_title
-   {
-       width:100%;
-       margin-bottom:0;
-   }
-   .filter_texticon
-   {
-       margin-top:20px;
-   }
-
-   /* Main - Hosting */
-
-   .hosting
-   {
-       display:grid;
-       grid-template-columns:1fr;
-       row-gap:2rem;
-   }
-   .hosting1
-   {
-       display:grid;
-       grid-template-columns:1fr;
-       row-gap:2rem;
-       height:auto;
-       margin-right:0;
-       background-color:white;
-   }
-   .hosting2
-   {
-       grid-row-start:1;
-   }
-
-   /* Main - Activity */
-
-   .activity
-   {
-       margin:0 0 20px 0;
-       padding:20px;
-   }
-   .activity_bloc
-   {
-       height:auto;
-       flex-direction:column;
-       row-gap:20px;
-   }
-   .activity_bloc h3
-   {
-       padding-left:10px;
-       margin:15px 0;
-   }
-   .activity_1card
-   {
-       width:100%;
-   }
-   .activity_img1
-   {
-       height:150px;
-   }
-   .activity_2card
-   {
-       width:100%;
-       row-gap:20px;
-   }
-   .activity_img2
-   {
-       height:150px;
-   }
-   .activity_img3
-   {
-       height:150px;
-   }
-
-   /* Footer */
-
-   footer 
-   {
-       flex-direction:column;
-       padding:20px 0 20px 50px;
-   }
-   footer div
-   {
-       width:100%;
-   }
+    color:black;
 }
